--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>Well</title>
     <!-- 使用cdn加速的css文件，配置在vue.config.js -->
     <% for (var i in htmlWebpackPlugin.options.cdn && htmlWebpackPlugin.options.cdn.css) { %>
-    <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="stylesheet" as="style"/>
+    <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.cdn.css[i] %>"/>
     <% } %>
 </head>
 
