--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <% for (var i in htmlWebpackPlugin.options.cdn && htmlWebpackPlugin.options.cdn.css) { %>
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.options.cdn.css[i] %>"/>
     <% } %>
-    <link rel="stylesheet" href="static/css/loader.css"/>
+    <link rel="stylesheet" href="css/loader.css"/>
 </head>
 
 <body>
